@@ -1,3 +1,8 @@
+2014-02-03  Andrey Belevantsev  <abel@ispras.ru>
+
+	* sel-sched-ir.c (sel_gen_insn_from_expr_after): Reset INSN_DELETED_P
+	on the insn being emitted.
+
 2014-02-03  James Greenhalgh  <james.greenhalgh@arm.com>
 	    Will Deacon  <will.deacon@arm.com>
 
